IDEA配置